src/objects/mana_socialization__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>MANA socialization</relationshipLabel>
        <relationshipName>MANA_socialization</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cycle__c</fullName>
        <label>Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_and_time__c</fullName>
        <label>Date and time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distrct_Correct__c</fullName>
        <formula>substitute( District__c , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distrct (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality_Correct__c</fullName>
        <formula>substitute(  Municipality__c  , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Municipality (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipality__c</fullName>
        <label>Municipality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_participants__c</fullName>
        <label>Number of participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Picture_1__c</fullName>
        <label>Picture 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture_2__c</fullName>
        <label>Picture 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture_3__c</fullName>
        <label>Picture 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Region_Correct__c</fullName>
        <formula>substitute(  Region__c , &quot;_&quot;, &quot; &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region (Correct)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>MANA socialization</relationshipLabel>
        <relationshipName>MANA_socialization</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MANA socialization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Contact__c</columns>
        <columns>Date_and_time__c</columns>
        <columns>District__c</columns>
        <columns>Municipality__c</columns>
        <columns>Submission__c</columns>
        <columns>Region__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>MANA socialization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MANA socialization</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>